--- a/Frontend/adminDashboard.css
+++ b/Frontend/adminDashboard.css
@@ -47,3 +47,44 @@ body {
     padding: 20px;
   }
   
+  .user-cards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+  }
+  
+  .card {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 15px;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  
+  
+  .user-info {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    margin-bottom: auto;
+  }
+  
+  .user-info li {
+    margin-bottom: 5px;
+    font-weight: bold;
+  }
+  
+  .update-button {
+    background-color: #333;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 3px;
+    cursor: pointer;
+    margin-top: 10px;
+    align-self: flex-end;
+  }
+  
