--- a/Frontend/managerDashboard.css
+++ b/Frontend/managerDashboard.css
@@ -47,60 +47,20 @@ body {
     padding: 20px;
   }
   
-  .user-cards {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 15px;
+  .data-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
   }
   
-  .card {
-    background-color: #fff;
+  .data-table th, .data-table td {
     border: 1px solid #ddd;
-    border-radius: 5px;
-    padding: 15px;
-    margin-bottom: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    padding: 8px;
+    text-align: left;
   }
   
-  
-  .user-info {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    margin-bottom: auto;
-  }
-  
-  .user-info li {
-    margin-bottom: 5px;
+  .data-table th {
+    background-color: #f2f2f2;
     font-weight: bold;
   }
   
-  .update-button {
-    background-color: #333;
-    color: #fff;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 3px;
-    cursor: pointer;
-    margin-top: 10px;
-    align-self: flex-end;
-  }
-  
-  .employee-table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-  .employee-table th, .employee-table td {
-    border: 1px solid #ddd;
-    padding: 8px;
-  }
-  
-  .employee-table th {
-    background-color: #f2f2f2;
-    text-align: left;
-  }
-
-    
